@@ -9,6 +9,8 @@
 - Add basic resolver to pop3client Class
 - Add read and write methods to pop3client Class
 - Add GnuTLS support to pop3client Class (Setup, read/write methods)
+- Add utils files for support classes
+- Add write_to_file method to utils class, to enable mails to be written as .eml files
 *** Removed
 - Removed subprocess attempt
 ** [0.0.3] - 2020-03-02
